test/functions/bradc/typefn2.good
Error: Return type does not match type of returned expression (typefn2.chpl:1)
