test/functions/bradc/typefn2.chpl
def mymymin(type t): t {
  return -999;
}

var minint: int = mymymin(int);
var minfloat: float = mymymin(float);

writeln("minint is: ", minint);
writeln("minfloat is: ", minfloat);
